build and config

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,8 +1,5 @@
 {
   "projects": {
-    "default": "portfolio-73535",
-    "portfolio-rassi": "portfolio-rassi"
-  },
-  "targets": {},
-  "etags": {}
+    "default": "portfolio-rassi"
+  }
 }
